--- a/src/Containers/Home/HomePage/checkout/index.scss
+++ b/src/Containers/Home/HomePage/checkout/index.scss
@@ -197,7 +197,8 @@
   }
   &::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #bdbdbd;
+
+    background-color: #fffceb;
     border-radius: 5px;
   }
   &::-webkit-scrollbar {
@@ -206,7 +207,8 @@
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    background: linear-gradient(to bottom, #f79400, #f76f00);
+    background-color: #bdbdbd;
+    // background: linear-gradient(to bottom, #f79400, #f76f00);
     // background-image: -webkit-gradient(
     //   linear,
     //   40% 0%,
